Add Github edit links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,4 +18,6 @@
 
 <div class="page__footer-copyright"><!-- Modified 202001-sc -->
   &copy; {{ site.time | date: '%Y' }} {{ site.author.name | default: site.title }} / <a href="http://punderthings.com/">Punderthings, LLC</a> | License: <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://licensebuttons.net/l/by-nc/4.0/80x15.png" /></a> <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">CC-BY-NC</a>
+  <br/>
+  <strong><i class="fa fa-edit" aria-hidden="true"></i> Suggest changes to this page:</strong> <a href="{{ site.github.repository_url }}/edit/{{ site.branch }}/{{ page.path }}" title="Open GitHub Issue on {{ page.path }}">Propose change on GitHub</a></p>
 </div>
