--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,6 @@
 <div class="page__footer-follow">
   <ul class="social-icons">
-    {% if site.data.ui-text[site.locale].follow_label %}
-      <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
-    {% endif %}
+    <!-- Modified 202001-sc -->
 
     {% if site.footer.links %}
       {% for link in site.footer.links %}
