Improve description and use new map column

--- a/_layouts/committees.html
+++ b/_layouts/committees.html
@@ -55,8 +55,8 @@ classes: wide
           </li>
           <li><a href="{{ itm.calendar }}">Meeting Calendar</a>
             <ul>
-              <li><a href="{{ itm.feed }}">Day: {{ itm.day }} at {{ itm.time }}</a></li>
-              <li><a href="{{ itm.feed }}">{{ itm.location }}</a></li>
+              <li><a href="{{ itm.feed }}">{{ itm.day }} at {{ itm.time }}</a></li>
+              <li><a href="{{ itm.map }}">{{ itm.location }}</a></li>
               <li><a href="{{ itm.video }}">Watch On ACMi</a></li>
             </ul>
           </li>
