Emphasize link to materials (when available)

--- a/_layouts/meetings-arb-index.html
+++ b/_layouts/meetings-arb-index.html
@@ -11,7 +11,7 @@ classes: wide
   {% assign itm = entry[1] %}
   <dt id="{{ entry[0] }}">
     {% if itm.url %}
-    <a href="{{ itm.url }}">Docket# {{ entry[0] }}</a>
+    <a href="{{ itm.url }}">Docket# {{ entry[0] }} materials</a>
     {% else %}
     Docket# {{ entry[0] }}
     {% endif %}
