--- a/_layouts/draftwarrantlist.html
+++ b/_layouts/draftwarrantlist.html
@@ -7,15 +7,14 @@ layout: single
 <hr/>
 <dl>
   {% for itm in site.data[page.datafile] %}
-    <dt id="{{ itm.id }}">
-      {{ itm.article }} - {{ itm.title }} - DRAFT - DRAFT - DRAFT
-      <br/>
+    <dt>
+      <h3 class="header-link" id="{{ itm.id }}">{{ itm.article }} - {{ itm.title }}</h3>
       <small>
-        <i class="fa fa-chalkboard" aria-hidden="true" style="color: blue"></i> Draft article, not official.
         {% if itm.amendments %}<i class="fa fa-highlighter" aria-hidden="true" style="color: gold"></i> {{ itm.amendments }}{% endif %}
         {% if itm.recommend %}<i class="fa fa-check" aria-hidden="true" style="color: green"></i> {{ itm.recommend }}{% endif %}
         {% if itm.noaction %}<i class="fa fa-times" aria-hidden="true" style="color: red"></i> {{ itm.noaction }}{% endif %}
         {% if itm.defer %}<i class="fa fa-sign-in-alt" aria-hidden="true" style="color: orange"></i> {{ itm.defer }}{% endif %}
+        {% if itm.consent %}<i class="fa fa-hand-paper" aria-hidden="true" style="color: yellow"></i> {{ itm.consent }}{% endif %}
       </small>
     </dt>
     <dd>
