--- a/_layouts/libraries.html
+++ b/_layouts/libraries.html
@@ -11,12 +11,13 @@ classes: wide
   {% for itm in site.data[page.datafile] %}
     <dt>
       <a href="{{ itm.url }}">{{ itm.title }}</a> 
-      {% if itm.status == "open" %} <i class="fa fa-book-open" aria-hidden="true"></i>{% else %} <i class="fa fa-window-close" aria-hidden="true"></i><b> CLOSED</b>{% endif %}
+      {% if itm.status == "open" %} <i class="fa fa-book-open" aria-hidden="true"></i>{% elsif itm.status == "appointment" %} <i class="fa fa-phone-square" aria-hidden="true"></i><b> By Appointment Only</b>{% else %} <i class="fa fa-window-close" aria-hidden="true"></i><b> CLOSED</b>{% endif %}
     </dt>
     <dd>
       <a href="{{ itm.url }}"><i class="fa fa-fw fa-home" aria-hidden="true"></i> <small>Homepage</small></a> |
       <a href="{{ itm.twitterurl }}"><i class="fab fa-twitter" aria-hidden="true"></i> <small>Twitter</small></a> |
       <i class="fa fa-fw fa-phone" aria-hidden="true"></i> <small>{{ itm.telephone }}</small> |
+      {% if itm.deliveryurl %}<a href="{{ itm.deliveryurl }}"><i class="fa fa-fw fa-truck" aria-hidden="true"></i> <small>Offers Delivery</small></a> |{% endif %}
       <a href="https://www.google.com/maps/search/?api=1&{{ itm.address | escape }}"><i class="fa fa-fw fa-map" aria-hidden="true"></i> <small>{{ itm.address }}</small></a> |
       <small>{{ itm.type }} Library</small>
       <br/><br/>
