Improve styling of attachment listing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,3 +39,11 @@
 .imgright {
   margin: 2px 0;
 }
+.itemattachments {
+  font-size: 0.75em; // Smaller, scalable
+  padding-left: 1em;
+  margin-bottom: 0.5em;
+}
+.itemdetail {
+
+}
