--- a/_layouts/draftwarrantlist.html
+++ b/_layouts/draftwarrantlist.html
@@ -10,6 +10,7 @@ layout: single
     <dt>
       <h3 class="header-link" id="{{ itm.id }}">{{ itm.article }} - {{ itm.title }}</h3>
       <small>
+        {% if itm.official %}<a href="{{ itm.official }}"><i>See Official Article Homepage</i></a>{% endif %}
         {% if itm.amendments %}<i class="fa fa-highlighter" aria-hidden="true" style="color: gold"></i> {{ itm.amendments }}{% endif %}
         {% if itm.recommend %}<i class="fa fa-check" aria-hidden="true" style="color: green"></i> {{ itm.recommend }}{% endif %}
         {% if itm.noaction %}<i class="fa fa-times" aria-hidden="true" style="color: red"></i> {{ itm.noaction }}{% endif %}
@@ -23,7 +24,7 @@ layout: single
         {{ itm.text | markdownify }}
         <br/>
         {% if itm.insertcomment %}<small><i class="fa fa-highlighter" aria-hidden="true" style="color: gold"></i> Proposer Comments: {{ itm.insertcomment }}</small>{% endif %}
-        {% if itm.boardcomment %}<small><i class="fa fa-highlighter" aria-hidden="true" style="color: orange"></i> Board or Committee Comments: {{ itm.boardcomment }}</small>{% endif %}
+        {% if itm.boardcomment %}<small><i class="fa fa-highlighter" aria-hidden="true" style="color: orange"></i> Board or Committee Comments: {{ itm.boardcomment | markdownify }}</small>{% endif %}
         {% if itm.inserturl  %}<small><i class="fa fa-fw fa-glasses" aria-hidden="true"></i> <a href="{{ itm.inserturl }}">{{ itm.insertby }}</a></small>
         {% elsif itm.insertby != "" %}<small><i class="fa fa-fw fa-glasses" aria-hidden="true"></i> {{ itm.insertby }}</small>
         {% endif %}
