--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -47,3 +47,9 @@
 .itemdetail {
 
 }
+.warrantcomments {
+  font-size: 0.80em !important; // Smaller, scalable, force override
+}
+.warrantsupplements {
+  font-size: 0.70em !important; // Smaller, scalable, force override
+}
