--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -6,11 +6,11 @@ layout: single
   {% if page.title %}<meta itemprop="headline" content="{{ page.title }}">{% endif %}
   {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt }}">{% endif %}
   {% if page.about %}<meta itemprop="about" content="{{ page.about }}">{% endif %}
-  {% if page.isPartOf %}<meta itemprop="about" content="{{ page.isPartOf }}">{% endif %}
+  {% if page.isPartOf %}<meta itemprop="isPartOf" content="{{ page.isPartOf }}">{% endif %}
   {% if page.date %}<meta itemprop="datePublished" content="{{ page.date | date: "%B %d, %Y" }}">{% endif %}
   {% if page.last_modified_at %}<meta itemprop="dateModified" content="{{ page.last_modified_at | date: "%B %d, %Y" }}">{% endif %}
 
-  <h2>{{ page.meeting }}{% if page.date %} of: {{ page.date | date: "%B %d, %Y" }}{% endif %}</h2>
+  <h2>{{ page.meeting }}{% if page.meetingdate %} on: {{ page.meetingdate }}{% endif %}</h2>
   <div id="preamble">
     By: 
     <span itemprop="author" itemscope itemtype="https://schema.org/Person">
